[package]
name = "rummy-nights"
version = "1.0.1"
description = "A rummy score counter web app written with Rust/Dioxus and Tailwind CSS."
repository = "https://github.com/arqalite/rummy-nights"
readme = "README.md"
license = "MIT"
edition = "2021"
categories = ["games"]
keywords = ["rummy", "game", "counter", "score"]
publish = false
build = "src/build.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dioxus = {version = "0.2", features = ["web", "fermi"]}
gloo-storage = "0.2"
gloo-console = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
chrono = "0.4"
