[package]
name = "rummy-nights"
version = "1.1.0"
description = "A rummy score counter web app written with Rust/Dioxus and Tailwind CSS."
repository = "https://github.com/arqalite/rummy-nights"
readme = "README.md"
license = "MIT"
edition = "2021"
categories = ["games"]
keywords = ["rummy", "game", "counter", "score"]
publish = false
build = "src/build.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dioxus = "0.3"
dioxus-web = "0.3"
gloo-storage = "0.2"
gloo-console = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
fermi = "0.4.0"
time = "0.3"

[build-dependencies]
chrono = "0.4"
