[package]
name = "rummy-nights"
version = "1.1.2"
description = "A rummy score counter web app written with Rust/Dioxus and Tailwind CSS."
repository = "https://github.com/arqalite/rummy-nights"
readme = "README.md"
license = "MIT"
edition = "2021"
categories = ["games"]
keywords = ["rummy", "game", "counter", "score"]
publish = false
build = "src/build.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
gloo-storage = "0.3"
gloo-console = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
time = "0.3"
dioxus = "0.4.0"
dioxus-web = "0.4.0"
fermi = "0.4.0"

[build-dependencies]
chrono = "0.4"
